# haarss

./: .gitignore  .travis.yml  Config.hs  Constants.hs  Feeds.hs  Fetching.hs  LICENSE  Main.hs  Model.hs  README.md  View.hs  haarss.cabal
Fetching/: History.hs
prototype/: CmdResp.hs  Main.agda  Model.agda
prototype/command-response/: Signature.agda  Sodium.agda  View.agda
prototype/reactive-banana/: BananaSodiumCompat.hs
src/: Config.hs  Constants.hs  Fetching.hs  Interface.hs  Main.hs  Model.hs  View.hs
src/Feed/: Annotated.hs  Feed.hs  Parser.hs
src/Fetching/: History.hs
src/Haarss/: Config.hs  Fetching.hs  Interface.hs  Main.hs  Model.hs  View.hs
src/Haarss/Feed/: Annotated.hs  Feed.hs  Parser.hs
src/Haarss/Fetching/: History.hs
src/Haarss/Model/: Window.hs
src/Model/: Window.hs
src/executable/: Main.hs
tests/: Tests.hs  generate_imports.sh
