name:                haarss
version:             0.1.0.0
synopsis:            A terminal based feed reader
-- description:
homepage:            none
license:             OtherLicense
license-file:        LICENSE
author:              Stevan Andjelkovic
maintainer:          none
-- copyright:
build-type:          Simple
cabal-version:       >=1.8

------------------------------------------------------------------------

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

executable haarss
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -Wall -threaded -with-rtsopts=-N

  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6

  if impl(ghc < 7.6)
    build-depends:
      directory >= 1.0 && < 1.2,
      ghc-prim >= 0.2.0.0 && < 0.3.1.0
  else
    build-depends:
      directory == 1.2.*

  build-depends:
    array >= 0.1 && < 0.6,
    base >= 4.2 && < 4.8,
    bytestring >= 0.9.0.1 && < 0.11,
    cereal >= 0.4.0.0 && < 0.5,
    containers >= 0.1 && < 0.6,
    filepath >= 1.1 && < 1.4,
    http-client >= 0.3.0 && < 0.5,
    http-client-tls >= 0.2.1 && < 0.3,
    http-types >= 0.7.0 && < 0.9,
    lens >= 3.10.0 && < 5,
    mtl >= 2.1.1 && < 2.3,
    process >= 1.0.1.0 && < 1.3,
    QuickCheck >= 2.5 && < 2.8,
    sodium >= 0.10.0.0 && < 0.12.0.0,
    stm >= 2.2.0.0 && < 2.4.3,
    text >= 0.11 && < 1.3,
    time >= 1.3 && < 1.6,
    vty >= 5 && < 6,
    wreq >= 0.3.0.0 && < 0.4,
    xml-conduit ==1.2.*,
    xml-lens ==0.1.6.*
